--- a/Forge.Web/Styles/Components/_sortables.scss
+++ b/Forge.Web/Styles/Components/_sortables.scss
@@ -45,9 +45,9 @@
             color: $color-action-40;
         }
         &:after{
-            font-family: "Ionicons";
-            font-size: 22px;
-            content: "\f397";
+            font-family: "typicons";
+            font-size: 18px;
+            //content: "\e021";
         }
     }
 
