--- a/Forge.Web/Styles/Components/_buttons.scss
+++ b/Forge.Web/Styles/Components/_buttons.scss
@@ -105,7 +105,7 @@ button,
         background: $color-link-10;
         color: $color-link-70;
         &:hover{
-            background: $color-link-20;
+            color: $color-link-90;
         }
     }
 
