--- a/Forge.Web/Styles/Components/_icons.scss
+++ b/Forge.Web/Styles/Components/_icons.scss
@@ -13,7 +13,7 @@
     &.icon--settings{   @include icon("\e102"); }
     &.icon--search{     @include icon("\e14e"); }
     &.icon--new{        @include icon("\e0cf"); }
-    &.icon--remove{     @include icon("\e121"); }
+    &.icon--remove{     @include icon("\e122"); }
     &.icon--back{       @include icon("\e047"); }
     &.icon--forward{    @include icon("\e049"); }
     &.icon--save{       @include icon("\e11d"); }
@@ -25,4 +25,5 @@
     &.icon--copy{       @include icon("\e10e"); }
     &.icon--bookmark{   @include icon("\e033"); }
     &.icon--bookmarks{  @include icon("\e032"); }
+    &.icon--tag{        @include icon("\e10f"); }
 }
