--- a/Forge.Web/Styles/Components/_nav.scss
+++ b/Forge.Web/Styles/Components/_nav.scss
@@ -24,7 +24,7 @@ $nav-arrow-size: 12px;
     z-index: 1000;
     font-size: $font-size-medium;
     background-color: $color-secondary-60;
-    border-bottom: 1px solid $color-link-70;
+    border-bottom: 1px solid $color-secondary-40;
     
 
     // Content Wrapper
@@ -85,7 +85,7 @@ $nav-arrow-size: 12px;
             white-space: nowrap;
             background-color: $nav-slide-background;
             top: $size-nav-height - 1px;
-            border: 1px solid $color-link-70;
+            border: 1px solid $color-secondary-40;
             border-top: none;
 
             &.open {  display: block; }
@@ -151,9 +151,9 @@ $bottom-color: $color-link-70;
         //span:nth-child(1) { text-shadow: 0 0 15px $color-action-10;}
         span:nth-child(2) {
             font-size: 12px;
-            color: $color-link-20;
+            color: $color-secondary-20;
             margin-top: 5px;
-            margin-left: 10px;
+            margin-left: 5px;
             text-transform: uppercase;
         }
     }
